[project]
name = "cybr-tenant-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "dylan"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.24.1,<0.25.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "rich (>=13.0.0)"
]

[project.scripts]
maccount = "manager:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["manager"]
