[project]
name = "cybr-tenant-cli"
version = "0.2.1"
description = ""
authors = [
    {name = "Dylan Lewis", email = "dylan17525@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.24.1,<0.25.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "rich (>=13.0.0)",
    "cryptography (>=45.0.0,<46.0.0)"
]

[project.scripts]
maccount = "cybr_tenant_cli.manager:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]